--- a/.github/workflows/update-profile-cards.yml
+++ b/.github/workflows/update-profile-cards.yml
@@ -23,6 +23,7 @@ jobs:
           curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://github-profile-summary-cards.vercel.app/api/cards/repos-per-language?username=agillhock7&theme=github_dark" -o assets/top-langs.svg
           curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://streak-stats.demolab.com?user=agillhock7&hide_border=true&theme=tokyonight&ring=22c55e&fire=22c55e&currStreakLabel=22c55e" -o assets/streak.svg
           curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://github-readme-activity-graph.vercel.app/graph?username=agillhock7&bg_color=0b1220&color=8ccfaf&line=22c55e&point=9be9a8&area=true&area_color=1f5f4a&hide_border=true&custom_title=Contribution%20Activity&radius=8" -o assets/activity-graph.svg
+          curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://ghchart.rshah.org/22c55e/agillhock7" -o assets/contribution-calendar.svg
 
       - name: Commit updated cards
         uses: EndBug/add-and-commit@v9
