chore: increase stats refresh cadence and shift content accents to blue

--- a/.github/workflows/update-profile-cards.yml
+++ b/.github/workflows/update-profile-cards.yml
@@ -3,7 +3,7 @@ name: Update Profile Cards
 on:
   workflow_dispatch:
   schedule:
-    - cron: "23 7 * * *"
+    - cron: "23 */6 * * *"
 
 permissions:
   contents: write
