--- a/.github/workflows/update-profile-cards.yml
+++ b/.github/workflows/update-profile-cards.yml
@@ -2,6 +2,13 @@ name: Update Profile Cards
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+      - master
+    paths:
+      - ".github/workflows/update-profile-cards.yml"
+      - "scripts/generate_stats_card.py"
   schedule:
     - cron: "23 */6 * * *"
 
@@ -17,9 +24,14 @@ jobs:
       - name: Ensure assets directory
         run: mkdir -p assets
 
-      - name: Download cards
+      - name: Generate stats card
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USER: agillhock7
+        run: python3 scripts/generate_stats_card.py
+
+      - name: Download remaining cards
         run: |
-          curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://github-profile-summary-cards.vercel.app/api/cards/stats?username=agillhock7&theme=github_dark" -o assets/github-stats.svg
           curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://github-profile-summary-cards.vercel.app/api/cards/repos-per-language?username=agillhock7&theme=github_dark" -o assets/top-langs.svg
           curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://streak-stats.demolab.com?user=agillhock7&hide_border=true&theme=tokyonight&ring=22c55e&fire=22c55e&currStreakLabel=22c55e" -o assets/streak.svg
           curl -fsSL --retry 5 --retry-all-errors --retry-delay 2 "https://github-readme-activity-graph.vercel.app/graph?username=agillhock7&bg_color=0b1220&color=8ccfaf&line=22c55e&point=9be9a8&area=true&area_color=1f5f4a&hide_border=true&custom_title=Contribution%20Activity&radius=8" -o assets/activity-graph.svg
