--- a/.github/workflows/update-profile-cards.yml
+++ b/.github/workflows/update-profile-cards.yml
@@ -29,6 +29,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_USER: agillhock7
+          HEADER_HEIGHT: "240"
         run: python3 scripts/generate_header.py
 
       - name: Generate stats card
